--- a/files/settings.json
+++ b/files/settings.json
@@ -1,1 +1,1 @@
-{"bins_file": "files/BINs.txt", "hash_file": "files/hash.txt", "card_number_file": "files/card_number.txt", "last_numbers_file": "files/last_numbers.txt"}
+{"card_number_file": "files/card_number.txt", "statistic_file": "files/statistics.txt"}
