--- a/files/settings.json
+++ b/files/settings.json
@@ -1,1 +1,1 @@
-{"card_number_file": "files/card_number.txt", "statistic_file": "files/statistics.txt"}
+{"card_number_file": "files/card_number.txt", "statistics_file": "files/statistics.txt", "visual_directory": "files"}
