--- a/files/settings.json
+++ b/files/settings.json
@@ -1,1 +1,1 @@
-{"card_number_file": "files/card_number.txt", "statistics_file": "files/statistics.txt", "visual_directory": "files"}
+{"card_number_file": "files/card_number.txt", "statistics_file": "files/statistics.txt", "hash_file": "files/hash.txt", "bins_file": "files/bins.txt", "last_numbers_file": "files/last_numbers.txt", "visual_directory": "files"}
